--- a/front-end/index.html
+++ b/front-end/index.html
@@ -55,7 +55,7 @@
 			<div class='data'></div>
 
 			<div class='button'>
-				<img class = 'click' ontouchstart = "app.sendData([1])" src = "res/up.png"/>
+				<img id = 'clicks' ontouchstart = "app.sendData([1])" src = "res/up.png"/>
 			</div>
 
 			<div class='button'>
