--- a/front-end/index.html
+++ b/front-end/index.html
@@ -40,11 +40,11 @@
 	<script src="libs/evothings/easyble/easyble.js"></script>
 
 	<!-- START VIEW -->
-	<div id="startView" style="background-color: rgb(192,192,192); border-radius: 10%;" >
+	<div id="startView">
 		<h2 style="text-align:center">Mina-mal Effort App</h2>
 		<img class="center" style="width:50%" src="./ui/images/walle.png" alt="robot arm" id='wall-e-img'>
 	
-		<button class="button green" id='start-scan' style='width: 100%;' onclick="app.showControls(); app.connect();"> Start </button>
+		<button class="button green" id='start-scan' style='width: 90%; margin-left: 18px;' onclick="app.showControls(); app.connect();"> Start </button>
 	</div>
 
 	<!-- CONTROL PANEL -->
