--- a/front-end/index.html
+++ b/front-end/index.html
@@ -36,51 +36,53 @@
 	<script src="cordova.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="libs/evothings/ui/ui.js"></script>
-
 	<script src="libs/evothings/easyble/easyble.js"></script>
 
 	<!-- START VIEW -->
-	<div id="startView">
+	<div><img class="center" style="width:40%; border-radius: 50%; margin-top: 10px; margin-bottom: 10px;" src="./ui/images/walle.png"alt="robot arm" id='wall-e-img'></div>
+	<div class="startView">
 		<h2 style="text-align:center">Mina-mal Effort App</h2>
-		<img class="center" style="width:50%" src="./ui/images/walle.png" alt="robot arm" id='wall-e-img'>
-	
-		<button class="button green" id='start-scan' style='width: 90%; margin-left: 18px;' onclick="app.showControls(); app.connect();"> Start </button>
+		<img class="center" style="width:70%; margin-bottom: 10px;" src="./ui/images/walle.png" alt="robot arm" id='wall-e-img'>
+		<button class="button green" id='start-scan' style='width: 70%; margin: auto; font-family: monospace;' onclick="app.showControls(); app.connect();"> Start </button>
+	</div>
+	<div class = "startView">
+		<h3>Developers: Mina, Kia, Anthony, Dan, Sam, and Aria</h3>
 	</div>
 
 	<!-- CONTROL PANEL -->
 	<div id='controlsView' class='wrapper' style='display: none'>
 
 		<div class='button-group vertical'>
-			<p class='group-title'>Hand</p>
-			<div class='data'></div>
+			<p class='group-title'>Claw</p>
+			<!-- <div class='data'></div> -->
 
-			<div class='button'>
-				<img class = 'click' 
-					 id = 'up' 
-					 ontouchstart = "app.sendData([1])" src = "res/up.png"/>
+			<div class='button' id = 'oC' 
+			ontouchstart = "upChangeColor(); app.sendData([1]);"
+			ontouchend = "upReturnColor(); app.sendData([9])">
+				<img class = 'click' src = "res/openClaw.png"/>
 			</div>
 
-			<div class='button'>
-				<img class = 'click' 
-					 id = 'down'
-					 ontouchstart = "app.sendData([2])" src = "res/down.png"/>
+			<div class='button' id = 'cC'
+			ontouchstart = "downChangeColor(); app.sendData([2]);"
+			ontouchend = "downReturnColor(); app.sendData([9])">
+				<img class = 'click' src = "res/closedClaw.png"/>
 			</div> 
 		</div>
 
 		<div class='button-group vertical'>
 			<p class='group-title'>Elbow</p>
-			<div class='data'></div>
+			<!-- <div class='data'></div> -->
 
-			<div class='button'>
-				<img class = 'click' 
-					 id = 'upp'
-					 ontouchstart = "app.sendData([3])" src = "res/up.png"/>
+			<div class='button' id = 'up'
+			ontouchstart = "uppChangeColor(); app.sendData([3])"
+			ontouchend = "uppReturnColor(); app.sendData([9])">
+				<img class = 'click' src = "res/up.png"/>
 			</div>
 
-			<div class='button'>
-				<img class = 'click' 
-					 id='downn'
-					 ontouchstart = "app.sendData([4])" src = "res/down.png"/>
+			<div class='button' id='down'
+			ontouchstart = "downnChangeColor(); app.sendData([4])"
+			ontouchend = "downnReturnColor(); app.sendData([9])">
+				<img class = 'click' src = "res/down.png"/>
 			</div>
 		</div>
 
@@ -88,19 +90,19 @@
 			<div class='button-group'>
 				<div class='title-data-row'>
 					<p class='group-title'>Wrist</p>
-					<div class='data'></div>
+					<!-- <div class='data'></div> -->
 				</div>
 				<div class='horizontal'>
-					<div class='button'>
-						<img class = 'click' 
-							 id='ccw'
-							 ontouchstart = "app.sendData([5])" src = "res/counter-clockwise.png"/>
+					<div class='button' id='ccw'
+					ontouchstart = "ccwChangeColor(); app.sendData([5])"
+					ontouchend = "ccwReturnColor(); app.sendData([9])">
+						<img class = 'click' src = "res/counter-clockwise.png"/>
 					</div>
 			
-					<div class='button'>
-						<img class = 'click' 
-							 id='cw'
-							 ontouchstart = "app.sendData([6])" src = "res/clockwise.png"/>
+					<div class='button' id='cw'
+					ontouchstart = "cwChangeColor(); app.sendData([6])"
+					ontouchend = "cwReturnColor(); app.sendData([9])">
+						<img class = 'click' src = "res/clockwise.png"/>
 					</div>
 				</div>
 			</div>
@@ -108,19 +110,19 @@
 			<div class='button-group'>
 				<div class='title-data-row'>
 					<p class='group-title'>Arm</p>
-					<div class='data'></div>
+					<!-- <div class='data'></div> -->
 				</div>
 				<div class='horizontal'>
-					<div class='button'>
-						<img class = 'click' 
-							 id='left'
-							 ontouchstart = "app.sendData([7])" src = "res/left.png"/>
+					<div class='button' id='left'
+					ontouchstart = "leftChangeColor(); app.sendData([7])"
+					ontouchend = "leftReturnColor(); app.sendData([9])">
+						<img class = 'click' src = "res/left.png"/>
 					</div>
 			
-					<div class='button'>
-						<img class = 'click'
-							 id='right'
-							 ontouchstart = "app.sendData([8])" src = "res/right.png"/>
+					<div class='button' id='right'
+					ontouchstart = "rightChangeColor(); app.sendData([8])"
+					ontouchend = "rightReturnColor(); app.sendData([9])">
+						<img class = 'click' src = "res/right.png"/>
 					</div>
 				</div>
 			</div>
