--- a/front-end/index.html
+++ b/front-end/index.html
@@ -27,7 +27,7 @@
 			<img src="res/left.png" />
 		</button>
 
-		<button id='disconnect' class="red small" onclick="app.disconnect(); app.showStart();" disabled>Disconnect</button>
+		<button id='disconnect' class="red small" onclick="app.disconnect(); app.showStart();" style="height:20px; width:120px; font-family: monospace; font-size:3vw;" disabled>Not Connected</button>
 
 		<img class="logotype" src="ui/images/logo.png" alt="Evothings" />
 	</header>
